@@ -495,3 +495,8 @@ div.gallerytext {
 .templatesUsed { margin-top: 1.5em; }
 
 #toolbar { clear: both; }
+
+.mw-plusminus-bold { font-weight: bold; }
+.mw-plusminus-pos { font-weight: normal; }
+.mw-plusminus-null { color: #aaa; }
+.mw-plusminus-neg { font-weight: normal; }
