@@ -438,3 +438,8 @@ table.collapsed tr.collapsable {
 
 .templatesUsed { margin-top: 1.5em; }
 #toolbar { clear: both; }
+
+.mw-plusminus-bold { font-weight: bold; }
+.mw-plusminus-pos { font-weight: normal; }
+.mw-plusminus-null { color: #aaa; }
+.mw-plusminus-neg { font-weight: normal; }
